--- a/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
+++ b/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
@@ -129,17 +129,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/yesno"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/previous">
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="8dp"
                 android:text="Previous"
                 android:id="@+id/prevbutton"
+                android:layout_weight="1"/>
 
-                />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Next"
+                android:id="@+id/nextbutton"
+                android:layout_weight="1"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/previous"
+            android:orientation="horizontal"
+            android:id="@+id/bottom">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Load"/>
         </LinearLayout>
 
         <EditText
