--- a/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
+++ b/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
@@ -160,7 +160,9 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Load"/>
+                android:text="Load"
+                android:id="@+id/loadbutton"
+                android:onClick="loadFromJson" />
         </LinearLayout>
 
         <EditText
