--- a/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
+++ b/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
@@ -73,7 +73,8 @@
                 android:layout_weight="1"
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
-                android:background="#8BC34A"/>
+                android:background="#8BC34A"
+                android:onClick="buttonYes" />
 
             <Button
                 android:layout_width="match_parent"
@@ -83,7 +84,8 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:background="#E57373"/>
+                android:background="#E57373"
+                android:onClick="buttonNo" />
         </LinearLayout>
 
         <LinearLayout
