--- a/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
+++ b/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
@@ -139,6 +139,20 @@
                 android:layout_weight="1" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/bottom"
+            android:id="@+id/realbottom">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="submit"
+                android:layout_marginTop="16dp"/>
+
+        </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -198,6 +212,7 @@
             android:layout_alignBottom="@+id/year"
             android:layout_alignLeft="@+id/txtviewMinor"
             android:layout_alignStart="@+id/txtviewMinor" />
+
 
     </RelativeLayout>
 
