--- a/Impressionable-Desktop/css/home.css
+++ b/Impressionable-Desktop/css/home.css
@@ -25,9 +25,9 @@
   color: white;
   text-align: center;
   text-decoration: none;
-  width: 200px;
+  width: 350px;
   height: 40px;
-  margin-left: 300px;
+  margin-left: 200px;
   margin-top: 300px;
   font-size: 35px;
   cursor: pointer;
@@ -53,10 +53,18 @@
   position: fixed;
 }
 
+#loggedInCredit {
+  color: white;
+  position: fixed;
+  margin-left: 1190px;
+  margin-top: -10px;
+  text-align: right;
+}
+
 #joinSessionInput {
-  margin-left: 570px;
-  margin-top: 500px;
-  width: 200px;
+  margin-left: 370px;
+  margin-top: 550px;
+  width: 600px;
 }
 
 #joinSessionButton {
@@ -67,21 +75,21 @@
   color: white;
   text-align: center;
   text-decoration: none;
-  width: 400px;
+  width: 600px;
   height: 40px;
-  margin-left: 450px;
-  margin-top: 70px;
+  margin-left: 370px;
+  margin-top: 10px;
   font-size: 35px;
   cursor: pointer;
   border-radius: 15px;
   position: fixed;
 }
 
-#updateInfoButton:hover, #createSessionButton:hover, #updateInfoButtonSelect:hover {
+#updateInfoButton:hover, #createSessionButton:hover, #updateInfoButtonSelect:hover, #nextButton:hover {
   background-color: #00a3cc;
 }
 
-#updateInfoButton:active, #createSessionButton:active, #updateInfoButtonSelect:active {
+#updateInfoButton:active, #createSessionButton:active, #updateInfoButtonSelect:active, #nextButton:active {
   background-color: #007a99;
 }
 
@@ -134,5 +142,28 @@
 .sessionID {
   color: white;
   text-align: center;
-  margin-top: 100px;
+  margin-top: 200px;
+}
+
+#coreQualities {
+  color: white;
+  margin-left: 280px;
+}
+
+#nextButton {
+  position: absolute;
+  display: block;
+  background-color: #00ccff;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  width: 400px;
+  height: 40px;
+  margin-left: 480px;
+  margin-top: 0px;
+  font-size: 35px;
+  cursor: pointer;
+  border-radius: 15px;
+  position: fixed;
 }
