--- a/Impressionable-Android/app/src/main/res/layout/activity_voting_page.xml
+++ b/Impressionable-Android/app/src/main/res/layout/activity_voting_page.xml
@@ -12,7 +12,8 @@
         android:theme="@style/AppTheme.AppBarOverlay"
         android:weightSum="1"
         android:layout_height="150dp"
-        android:layout_width="360dp">
+        android:layout_width="360dp"
+        app:expanded="false">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
