--- a/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
+++ b/Impressionable-Android/app/src/main/res/layout/content_voting_page.xml
@@ -192,7 +192,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="submit"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="16dp"
+                android:id="@+id/buttonSubmit"
+                android:onClick="buttonSubmit" />
 
         </LinearLayout>
 
